--- a/css/loginpage.css
+++ b/css/loginpage.css
@@ -63,6 +63,10 @@ font-size: 15px;
     width: 100%;
     height: 100%;
 }
+.logup:hover{
+    background-color: #666;
+    border: 1px solid #666;
+}
 .notice{
     margin-top: 10px;
     background-color: goldenrod;
