--- a/css/noticepage.css
+++ b/css/noticepage.css
@@ -10,6 +10,15 @@
     background: url(../images/notice.jpg);
     margin: 100px auto;
     padding: 40px;
+    position: relative;
+}
+#close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(100%, -100%);
+    font-size: 20px;
+    color: #333;
 }
 /* .notice img{} */
 h2{
